# video-downloader

./: .gitattributes  README.md  components.d.ts  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  main.ts  routes.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  douyin.rs  downloader.rs  main.rs
src/assets/icon/: iconfont.css  iconfont.js  iconfont.json
src/components/: Menu.vue
src/views/: DouyinMuplite.vue  DouyinSingle.vue  Home.vue  Layout.vue
