[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = [""]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

[profile.release]
lto = "thin"
opt-level="s"
codegen-units = 1
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["api-all"] }
async-trait = { version="^0.1.57"}
reqwest = { version = "^0.11.11", features = ["json"] }
anyhow = { version = "^1.0.62" }
thiserror = { version = "^1.0.32" }
tokio = { version = "^1.20.1", features = ["full"] }
futures = { version = "^0.3.23" }
log = { version = "^0.4.17" }

[target.'cfg(linux)'.dependencies]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

